fixed tooltip alignment issue

--- a/public/index.styl
+++ b/public/index.styl
@@ -46,7 +46,6 @@ body
     background: #272822
     font-size: 0px
     white-space: nowrap
-    position: relative    
 
     > div
       display: inline-block
@@ -93,10 +92,6 @@ body
     .output
         background: white
         overflow: auto
-        position: relative
-
-        > *
-          position: relative
 
         pre
           font-size: 14px
